--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Hello World!!!</h1>
+    <script src="index.js"></script>
+<!--The best practice is to put the js Scripts at the end of body sections, after all the existing elements-->
 </body>
 </html>
